--- a/style.css
+++ b/style.css
@@ -1,62 +1,196 @@
+*{
+    margin: 0;
+    padding: 0;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+header{
+    background-image:linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url('images/11098.jpg');
+    height: 130vh;
+    background-size: cover;
+    background-position: center;
+}
+ul{
+   float: right;
+   list-style-type: none; 
+   margin-top: 25px;
+}
 
-		body {
-			background-color: #f1f1f1;
-			font-family: Arial, sans-serif;
-		}
-		#quiz {
-			background-color: #fff;
-			border-radius: 10px;
-			box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
-			margin: 0 auto;
-			max-width: 600px;
-			padding: 20px;
-			text-align: center;
-		}
-		.question {
-			font-size: 24px;
-			font-weight: bold;
-			margin-bottom: 20px;
-			text-align: left;
-		}
-		.answers {
-			display: flex;
-			flex-wrap: wrap;
-			justify-content: space-between;
-			margin-bottom: 20px;
-			padding: 0;
-		}
-		.btn {
-			background-color: #eee;
-			border-radius: 5px;
-			cursor: pointer;
-			flex-basis: calc(50% - 10px);
-			margin-bottom: 10px;
-			padding: 10px;
-			text-align: center;
-			transition: background-color 0.2s ease;
-		}
-		.answer:hover {
-			background-color: #ddd;
-		}
-		.selected {
-			background-color: #2196f3;
-			color: #fff;
-		}
-		.selected:hover {
-			background-color: #0d47a1;
-		}
-		.submit {
-			background-color: #2196f3;
-			border: none;
-			border-radius: 5px;
-			color: #fff;
-			cursor: pointer;
-			font-size: 16px;
-			padding: 10px 20px;
-			text-align: center;
-			text-decoration: none;
-			transition: background-color 0.2s ease;
-		}
-		.submit:hover {
-			background-color: #0d47a1;
-		}
+
+ul li{
+    display: inline-block;
+}
+
+ul li a{
+    text-decoration: none;
+    color: #fff;
+    padding: 5px 20px;
+    border: 1px solid transparent;
+    transition: 0.6s ease;
+}
+
+ul li a:hover{
+    background-color: #fff;
+    color: #000;
+}
+
+ul li.active a{
+    background-color: #fff;
+    color: #000;
+}
+
+.logo img{
+    float: left;
+    width: 100px;
+    height: auto;
+}
+.main{
+    max-width: 1400px;
+    margin: auto;
+}
+
+.title{
+    position: absolute;
+    top: 30%;
+    left: 50%;
+    margin-top: 50px;
+    transform: translate(-50%,-50%);
+}
+.title h1{
+    color:#fff;
+    font-size: 50px;
+    text-align: center;
+}
+.title h3{
+    color: aqua;
+    top: 50%;
+    left: 50%;
+    position: center; 
+    font-size: 30px;
+}
+.button{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    
+    
+}
+.btn{
+    border: 2px solid #fff;
+    padding: 10px 30px;
+    color: #fff;
+    text-decoration: none;
+    transition: 0.6s ease;
+    
+}
+.btn:hover{
+    background-color: #fff;
+    color: #000;
+}
+.content{
+    width: 100%;
+    top: 50%;
+    transform: translateY(70%);
+    text-align: left;
+    color: rgb(225, 222, 230);
+    margin-left: 20px;
+}
+.button2{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,2500%);
+    
+    
+}
+body{
+    background: #8f8c8c;
+}
+
+
+.container{
+    width: 60%;
+    margin: 50px auto;
+
+}
+.contact-box{
+    background: rgb(255, 250, 240);
+    display:flex;
+   
+    
+}
+.contact-left{
+    flex-basis: 50%;
+ padding: 40px;
+ margin: 30px;
+}
+.contact-right{
+    flex-basis: 50%;
+ padding: 50px;
+ background: lightblue;
+ color: #fff;
+
+}
+h1{
+    margin-bottom: 10px;
+}
+.container p{
+    margin-bottom: 40px;
+}
+.input-row{
+   display: flex;
+   justify-content: space-between;
+    margin-bottom: 30px;
+}
+.input-row.input-grp{
+    flex-basis: 50%;
+
+}
+input{
+    width: 100%;
+    border: none;
+    border-bottom: 1px solid #ccc;
+    outline: none;
+    padding-bottom: 5px;
+}
+textarea{
+    width: 100%;
+    border: 1px solid #ccc;
+    outline: none;
+    padding: 10px;
+box-sizing: border-box;
+}
+label{
+    margin-bottom: 8px;
+    display: block;
+    color: #585fcc;
+}
+button{
+    background: #585fcc;
+    width: 100px;
+    border: none;
+    outline: none;
+    color: #fff;
+    height: 35px;
+    border-radius: 30px;
+    margin-top: 20px;
+    box-shadow: 0px 5px 15px opx rgba(28,0,181,0.3);
+}
+.contact-left h3{
+    color: #585fcc;
+    font-weight: 600;
+    margin-bottom: 20px;
+}
+.contact-right h3{
+    font-weight: 600;
+    margin-bottom: 20px;
+}
+ tr td:first-child{
+    padding-right: 30px;
+ }
+ tr td{
+    padding-top: 50px;
+ }
+ h1{
+    color: #ccc;
+ }
